Fix for ZOOM into input for mobile: https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone

--- a/main.css
+++ b/main.css
@@ -26,6 +26,7 @@ input {
     background: #333;
     color: whitesmoke;
     padding: 15px 0;
+    font-size: 16px;
 }
 
 button {
